* Updated bundled version of AutoIt to 3.3.6.1. Closes http://jira.openqa.org/browse/WTR-440 (Jarmo Pertman)

=== Firefox improvements

* Fixed Element#exists? for cases where nested elements were used for locating (Alok Menghrajani)
* Ignore uppercase tags in XHTML when searching for elements (Alok Menghrajani)

== Version 1.6.7 - 2010/10/26

=== General improvements

* added new waiting methods for Watir::Element: #when_present, #wait_until_present and #wait_while_present (Jari Bakken and Jarmo Pertman)
* added new waiting methods for Watir::IE and Watir::Firefox: #wait_until and #wait_while (Jari Bakken and Jarmo Pertman)
* added method #present? for Watir::Element (Jari Bakken and Jarmo Pertman)
* deprecated old waiting methods in Watir::Waiter which will be removed in some future version - use Watir::Wait instead (Jarmo Pertman)

=== IE improvements

* removed Watir::Simple (Željko Filipin)
* #click_no_wait was not working with frame elements. Closes http://jira.openqa.org/browse/WTR-459 (Jarmo Pertman)

=== Firefox improvements

* get_attribute_value now works with attributes named something like "foo-bar" (Alan Shields)

=== Cleanup & Maintenance

* cleaned up repo at GitHub
* merge licenses into one (Željko Filipin)
* Rakefile works now under non-Windows systems too (Alan Shields)
* Removed datahandler.rb


Whole Changelog is available at http://github.com/bret/watir/compare/v1.6.6...v1.6.7


== Version 1.6.6 - 2010/10/2

=== IE improvements

* #elements_by_xpath uses now Nokogiri's xpath method instead of search (Matt Baker)
* Element#style returns now currentStyle. Closes http://jira.openqa.org/browse/WTR-444 (Jarmo Pertman)
* Element#visible? doesn't return false anymore for disabled elements (Charley Baker)
* TH elements texts are included into Table#to_a results. Closes http://jira.openqa.org/browse/WTR-445 (Jarmo Pertman)