@@ -23,6 +23,12 @@ module Watir
         Watir::Wait.until(@timeout) { @element.present? }
         @element.send(m, *args, &block)
       end
+    
+      # Returns element id
+      def id
+        @element.id
+      end
+
     end
 
     #
